<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dots_height"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="5dp"
                android:background="@drawable/onboarding_dotunselected"/>
            <TextView
                android:layout_width="35dp"
                android:layout_height="5dp"
                android:background="@drawable/onboarding_dotunselected"/>
            <TextView
                android:layout_width="35dp"
                android:layout_height="5dp"
                android:background="@drawable/onboarding_dotunselected"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/primary_dark"
                android:text="@string/login"
                android:textColor="@color/whiteTextColor"
                android:textSize="20sp"
                android:layout_margin="10dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/RegisterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/onboarding_button"
                android:text="@string/register"
                android:textColor="@color/whiteTextColor"
                android:textSize="20sp"
                android:layout_margin="10dp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_intro"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/primary_dark"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</LinearLayout>