<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yaapps.kikicare.UI.LoginActivity"
    android:background="@color/gradyellow"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/container3">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:paddingTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:weightSum="12">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/whiteTextColor" />

                    <TextView
                        style="@style/viewParent.headerText.WhiteMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Set A New Animal"
                        android:textAlignment="center"
                        android:textSize="20sp" />



                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/whiteTextColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextName"
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:hint="@string/animal_name_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="What's your Animal"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:layout_marginRight="30dp"
                                android:layout_marginTop="30dp"/>
                            <Spinner
                                android:id="@+id/spinnerType"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:entries="@array/type"
                                android:layout_weight="2"
                                android:spinnerMode="dialog"
                                android:layout_marginTop="30dp"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="Sexe"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:layout_marginRight="30dp"
                                android:layout_marginTop="30dp"/>
                            <Spinner
                                android:id="@+id/spinnerSexe"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:entries="@array/sexe"
                                android:layout_weight="2"
                                android:spinnerMode="dialog"
                                android:layout_marginTop="30dp"/>

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="Size"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:layout_marginRight="30dp"
                                android:layout_marginTop="30dp"/>
                            <Spinner
                                android:id="@+id/spinnerSize"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:entries="@array/size"
                                android:layout_weight="2"
                                android:spinnerMode="dialog"
                                android:layout_marginTop="30dp"/>

                        </LinearLayout>



                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputRace"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextRace"
                                style="@style/modifiedEditText"
                                android:hint="@string/animal_race_hint"
                                android:maxLines="1"
                                android:inputType="textPersonName"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputAge"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextAge"
                                style="@style/modifiedEditText"
                                android:hint="@string/animal_age_hint"
                                android:maxLines="1"
                                android:focusable="false"
                                android:inputType="date"/>
                        </com.google.android.material.textfield.TextInputLayout>



                        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                            android:id="@+id/saveBtn"
                            style="@style/saveButton"
                            app:spinning_bar_width="4dp"
                            app:spinning_bar_color="#FFF"
                            android:text="Save"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            app:spinning_bar_padding="6dp"
                            app:initialCornerAngle="27dp"/>



                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
        <ImageView
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:adjustViewBounds="false"/>
    </FrameLayout>
</RelativeLayout>